--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,16 @@ sudo: false
 language: ruby
 cache: bundler
 rvm:
-  - 2.6.5
-before_install: gem install bundler -v 1.17.2
+  - 2.4
+  - 2.5
+  - 2.6
+
+before_install:
+  - gem uninstall -v '>= 2' -i $(rvm gemdir)@global -ax bundler || true
+  - gem install bundler -v 1.17.2
+
+before_script:
+  - docker-compose up -d
+
+after_script:
+  - docker-compose down
